finished classes and interfaces module

--- a/advanced_css/natours/starter/.gitignore
+++ b/advanced_css/natours/starter/.gitignore
@@ -1,1 +1,4 @@
 node_modules/
+
+#  to run live-server without node_modules constantly updating things
+# // live-server --no-browser --ignore=node_modules/
