--- a/advanced_css/natours/starter/package.json
+++ b/advanced_css/natours/starter/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -watch"
+    "compile:sass": "node-sass sass/main.scss css/style.css -watch --ignore node_modules"
   },
   "author": "Bailee Dastugue",
   "license": "ISC",
@@ -15,3 +15,5 @@
     "live-server": "^1.2.1"
   }
 }
+
+
